--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-      "devStart": "nodemon server.js"
+    "devStart": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "pg-promise": "^11.5.4"
+    "mongodb": "^6.2.0",
+    "path": "^0.12.7",
+    "pg-promise": "^11.5.4",
+    "qs": "^6.11.2",
+    "streamifier": "^0.1.1",
+    "url-join": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
